# tanker-flow

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  region_mapping.qgz
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
analysis/: DATA_QUALITY.md  MODELS.md  RESEARCH_PLAN.md  SIGNALS.md  VALIDATION.md  density_detail_12000px.tif  density_geotiff.py  density_overview_4000px.tif  scratch_audit.py  validate_signals.py
data/: capture_rate.py  coverage.py  eia.py
deploy/: tanker-ingester-worker.service  worker.env.example
docs/: design-2026-06-08-data-eia.md  design-2026-06-08-second-ip-ingester.md  park-checkups.md  pipeline-health.md  review-2026-05-28.md  review-2026-05-31-post-hardening-audit.md  review-2026-05-31-pre-signal-audit.md  review-2026-06-02-park-audit.md  runbook-2026-06-11-second-ip-worker.md
ingestion/: README.md  aisstream.py  dynamic_enrichment.py  metrics.py  models.py  terminal_boxes.py  vesselfinder.py  vf_rescue.py
pipeline/: dest_parser.py  geo.py  laden.py  legs.py  port_events.py  queues.py  retirement.py  scoring.py  signal.py  state_machine.py  utils.py  visits.py
qgis/: README.md  terminal_names.csv  terminal_zones.qgz  terminal_zones_scratch.gpkg
scripts/: aisstream_bbox_probe.py  aisstream_conn_test.py  backup_db.sh  complete_registry_from_archive.py  discover_berth_tankers.py  discover_newbuilds.py  import_igu_fleet.py  parse_igu_fleet.py
tests/: test_aisstream_sharding.py  test_bbox_catchall.py  test_berth_discovery.py  test_coverage.py  (+14 more)
(+64 files in other folders)
