[project]
name = "tanker-flow"
version = "0.1.0"
description = "using live tanker positions to derive leading henry-hub/ttf spread price signal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "websockets>=16.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "alembic>=1.18.4",
    "textual>=8.2.7",
    "textual-plot>=0.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
